--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="build/css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -9,17 +10,26 @@
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
-    <script src="/js/map.js"> </script>
+    <script src="/maps/map.js"> </script>
     <title>Bar Crawl</title>
   </head>
   <body>
     <div class="container">
       <h1>Bar Crawl Planner</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="bar-list">
+        <ul>
+          <li id="yamhill-li">Yamhill Pub</li>
+          <li>Triple Nickel</li>
+          <li>My Father's Place</li>
+          <li>Space Room</li>
+          <li>Binks</li>
+        </ul>
+      </div>
+      <div id="map"></div>
+      <script async defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPjD7ezfYzHP3AR6KOXNrT9-7eWLliVwY&libraries=visualization&callback=initMap">
+      </script>
     </div>
-    <div id="map"></div>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPjD7ezfYzHP3AR6KOXNrT9-7eWLliVwY&libraries=visualization&callback=initMap">
-    </script>
   </body>
 </html>
