switch to using submit button to trigger addToMarker

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li>Space Room</li>
           <li>Binks</li>
         </ul>
+        <button class="submit-bars">Submit</submit>
       </div>
       <div id="map"></div>
       <script async defer
