make addMarker able to take any ID as input

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div class="bar-list">
         <ul>
-          <li id="yamhill">Yamhill Pub</li>
-          <li>Triple Nickel</li>
-          <li>My Father's Place</li>
-          <li>Space Room</li>
-          <li>Binks</li>
+          <li id="yamhill" class="bar-item">Yamhill Pub</li>
+          <li id="triple" class="bar-item">Triple Nickel</li>
+          <li id="mfp" class="bar-item">My Father's Place</li>
+          <li id="spaceroom" class="bar-item">Space Room</li>
+          <li id="binks" class="bar-item">Binks</li>
         </ul>
         <button class="submit-bars">Submit</submit>
       </div>
