add remove marker functionality

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li id="binks" class="bar-item">Binks</li>
         </ul>
         <button class="submit-bars">Submit</submit>
+        <button class="clear-selections">Clear Selections</submit>
       </div>
       <div id="map"></div>
       <script async defer
