add basic styling

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <title>Bar Crawl</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Bar Crawl Planner</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="header">
+      <div class="header-text">
+        <h1>Bar Crawl Planner</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+    <div>
       <div class="bar-list">
         <ul>
           <li id="yamhill" class="bar-item">Yamhill Pub</li>
@@ -24,9 +28,15 @@
           <li id="mfp" class="bar-item">My Father's Place</li>
           <li id="spaceroom" class="bar-item">Space Room</li>
           <li id="binks" class="bar-item">Binks</li>
+          <li id="paddys" class="bar-item">Paddys</li>
+          <li id="kellysOlympian" class="bar-item">Kelly's Olympian</li>
+          <li id="rialto" class="bar-item">Rialto</li>
+          <li id="sideStreet" class="bar-item">Side Street</li>
+          <li id="sweetHereafter" class="bar-item">Sweet Hereafter</li>
+          <li id="belmontInn" class="bar-item">The Belmont Inn</li>
         </ul>
-        <button class="submit-bars">Submit</submit>
-        <button class="clear-selections">Clear Selections</submit>
+        <button class="submit-bars btn btn-danger center-block">Submit</submit>
+        <button class="clear-selections btn btn-default center-block">Clear Selections</submit>
       </div>
       <div id="map"></div>
       <script async defer
